[tool.poetry]
name = "mielib"
version = "0.1.11"
description = "Python library with many Mie-related functions for optics and acoustics"
authors = ["Ivan Toftul <toftul.ivan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/toftul/mielib"
homepage = "https://github.com/toftul/mielib"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
